--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -42,14 +42,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 64,
       "metadata": {
         "id": "FVYwaObI8DC1"
       },
       "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "\n",
@@ -76,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 65,
       "metadata": {
         "id": "zjCBk1BI8DC1"
       },
@@ -90,26 +89,26 @@
             "To: /home/izzudd/Dev/dicoding-adp/dataset.zip\n",
             "100%|████████████████████████████████████████| 280k/280k [00:00<00:00, 2.33MB/s]\n",
             "Archive:  dataset.zip\n",
-            "  inflating: dataset/Readme.txt      \n",
-            "  inflating: dataset/day.csv         \n",
-            "  inflating: dataset/hour.csv        \n"
+            "  inflating: data/Readme.txt         \n",
+            "  inflating: data/day.csv            \n",
+            "  inflating: data/hour.csv           \n"
           ]
         }
       ],
       "source": [
-        "!rm -rf dataset\n",
+        "!rm -rf data\n",
         "!gdown 1RaBmV6Q6FYWU4HWZs80Suqd7KQC34diQ -O dataset.zip\n",
-        "!unzip dataset.zip -d dataset\n",
+        "!unzip dataset.zip -d data\n",
         "!rm dataset.zip"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 66,
       "metadata": {},
       "outputs": [],
       "source": [
-        "df = pd.read_csv('dataset/hour.csv')"
+        "df = pd.read_csv('data/hour.csv')"
       ]
     },
     {
@@ -148,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 67,
       "metadata": {},
       "outputs": [
         {
@@ -470,7 +469,7 @@
               "max       886.000000    977.000000  "
             ]
           },
-          "execution_count": 25,
+          "execution_count": 67,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -488,7 +487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 68,
       "metadata": {
         "id": "ax-3tEjc9Cj1"
       },
@@ -518,7 +517,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 69,
       "metadata": {},
       "outputs": [
         {
@@ -579,7 +578,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 70,
       "metadata": {
         "id": "jVnYpprE9Evz"
       },
@@ -642,7 +641,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 71,
       "metadata": {},
       "outputs": [
         {
@@ -813,7 +812,7 @@
               "4    1  "
             ]
           },
-          "execution_count": 29,
+          "execution_count": 71,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -840,7 +839,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 72,
       "metadata": {},
       "outputs": [
         {
@@ -885,7 +884,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 73,
       "metadata": {
         "id": "e9CQCZjk8DC2"
       },
@@ -927,7 +926,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 74,
       "metadata": {},
       "outputs": [
         {
@@ -965,7 +964,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 75,
       "metadata": {},
       "outputs": [
         {
@@ -974,7 +973,7 @@
               "[]"
             ]
           },
-          "execution_count": 33,
+          "execution_count": 75,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -1012,7 +1011,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 76,
       "metadata": {},
       "outputs": [
         {
@@ -1060,7 +1059,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 77,
       "metadata": {},
       "outputs": [
         {
@@ -1125,7 +1124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 78,
       "metadata": {},
       "outputs": [
         {
@@ -1175,7 +1174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 79,
       "metadata": {},
       "outputs": [
         {
@@ -1217,7 +1216,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 80,
       "metadata": {},
       "outputs": [
         {
@@ -1263,7 +1262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 81,
       "metadata": {},
       "outputs": [
         {
@@ -1314,7 +1313,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 82,
       "metadata": {},
       "outputs": [
         {
@@ -1342,7 +1341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 83,
       "metadata": {},
       "outputs": [
         {
@@ -1391,7 +1390,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 84,
       "metadata": {},
       "outputs": [
         {
